@@ -26,6 +26,8 @@ core:
 * win32: revert handling service with callbacks. Even if Win32::Daemon proposes
   the callbacks usage obsoletes the typical skeleton code, the callbacks usage
   is known to leak memory and tests with latest Win32::Daemon shows that's true.
+* win32: handle task run in a managed thread as this is more efficient than using
+  perl fork with thread emulation under win32 and preserve a little memory usage.
 
 inventory:
 * Fix lspci command subsystem parsing
